2000-07-17  Federico Mena Quintero  <federico@helixcode.com>

	* cal-client/cal-client.c (cal_client_get_object): Fixed inline
	docs.
	(cal_client_new): Ditto.
	(cal_client_get_n_objects): Added inline docs.

2000-07-14  Federico Mena Quintero  <federico@helixcode.com>

	* cal-util/cal-component.c (CalComponentAlarm): New internal
	represntation for alarm components.  We really don't map them to a
	CalComponent because it is more convenient to handle them as
	"child" structures.
	(make_alarm): New function to create a CalComponentAlarm from an
	icalcomponent representing a VALARM.
	(scan_alarm_property): New function to scan a property from an
	alarm component.  We support ACTION.
	(cal_component_get_first_alarm): New function to start an iterator
	over the alarms in a calendar component.
	(cal_component_alarm_get_action): New function.
	(cal_component_alarm_set_action): New function.

2000-07-13  Seth Alves  <alves@hungry.com>

	* conduits/todo/todo-conduit.c: conduit based on the calendar conduit.
	this conduit syncs a pilot's ToDoDB database to wombat's list of "todo"
	events.

	* gui/gncal-todo.c (simple_todo_editor): set todo's priority control
	based on value from ical object during edit.

2000-07-12  Federico Mena Quintero  <federico@helixcode.com>

	* gui/print.c: Revert Michael's GnomeFont patch until the
	gnome-print API stabilizes.

2000-07-12  Michael Meeks  <michael@helixcode.com>

	* gui/print.c (titled_box, print_text, print_month_small),
	(bound_text): GnomeFont update.

2000-07-12  Seth Alves  <alves@hungry.com>

	* conduits/calendar/calendar-conduit.c: fixed various problems

	* cal-client/Makefile.am: build a static version of the library
	to link with the conduits

	* cal-util/Makefile.am: same

2000-07-11  Federico Mena Quintero  <federico@helixcode.com>

	* cal-util/cal-component.c (scan_property): Handle the COMPLETED
	property.
	(free_icalcomponent): Ditto.
	(cal_component_get_completed): Ditto.
	(cal_component_set_completed): Ditto.